fixed weird message wrapping for Enter Match # Here

--- a/web/pages/static/style.css
+++ b/web/pages/static/style.css
@@ -35,7 +35,7 @@ justify-content: space-between;
   align-items: center;
   text-align: center;
   align-content: center;
-  width: 30%;
+  width: 47%;
   margin-bottom: 60px;
   border-radius: 30px;
 }
